# MutiCamApp

./: .gitignore  CMakeLists.txt  KcgMatch.h  KcgMatch_fixed.cpp  Makefile  Makefile.Debug  Makefile.Release  MutiCamApp.pro  PathHelpers.cpp  PathHelpers.h  README.md  build_and_run.bat  cameramanager.cpp  cameramanager.h  cmvcamera.cpp  cmvcamera.h  config.json  config.jsonc  cvmattype.h  drawingmanager.cpp  drawingmanager.h  grabimgthread.cpp  grabimgthread.h  main.cpp  main.py  main.spec  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  run_test.bat  serial_test.cpp  settingsmanager.cpp  settingsmanager.h  ui_mainwindow.h  模板匹配.md  软件架构说明书_C++版本.md
.cunzhi-memory/: context.md  metadata.json  patterns.md  preferences.md  rules.md
.trae/rules/: project_rules.md
.vercel/: project.json
Development/Documentations/: 工业相机Windows SDK开发指南V4.3.2（.NET）.chm
Development/Includes/: CameraParams.h
Development/Libraries/win32/: MvCameraControl.lib
Development/MVFG/Documentations/Chinese/: 工业采集卡Windows SDK开发指南V2.3.0（.NET）.chm  工业采集卡Windows SDK开发指南V2.3.0（C）.chm
Development/MVFG/Documentations/English/: Frame Grabber SDK (Windows) Developer Guide (.NET) V2.3.0.chm  Frame Grabber SDK (Windows) Developer Guide (C) V2.3.0.chm
Development/MVFG/DotNet/AnyCpu/: MvFGCtrlC.Net.xml
Development/MVFG/Includes/: MVFGControl.h  MVFGDefines.h
Development/MVFG/Libraries/win32/: MVFGControl.lib
Development/MVFG/Libraries/win64/: MVFGControl.lib
Development/Samples/C#/MvCameraControlNet/: CSharpDotNetSamples_VS2008.sln
Development/Samples/C#/MvCameraControlNet/MultiLightCtrlDemo/: MultiLightCtrlDemo.Designer.cs  MultiLightCtrlDemo.cs  MultiLightCtrlDemo.csproj  MultiLightCtrlDemo.en.resx  MultiLightCtrlDemo.resx  MultiLightCtrlDemo.zh-CHS.resx
Development/Samples/C#/MvCameraControlNet/SetIODemo/: SetIODemo.Designer.cs  SetIODemo.cs  SetIODemo.csproj
Development/Samples/C#/MvCameraControlNet_V2/: MvCameraControlNetSamples_2010.sln
Development/Samples/DirectShow/DirectShowDisplay/: DirectShowDisplay.cpp
Development/Samples/Java/GetImage/src/: GrabImage.java
Development/Samples/Labview/GenTLSamples/: DisplayPanel.vi  GenTLSamples.lvproj
Development/Samples/Labview/MvLVLib/: MvCameraControl.lvlib
Development/Samples/Labview/Samples/: Samples.lvproj
Development/Samples/Labview/TwoCameraSamples/: TwoCameraSamples.lvproj
Development/Samples/MvSerial/SerialDemo/: SerialDemo.rc  SerialDemo.vcproj  SerialDemoDlg.cpp  resource.h
Development/Samples/Python/MvImport/: PixelType_header.py
Development/Samples/VC/VS/: Samples_VS2008.sln  Samples_VS2010.sln  Samples_VS2013.sln  Samples_VS2015.sln
Logs/: 2025-01-06.txt  2025-07-15.txt
SDK/: ReadMe.txt
Settings/: settings.ini  settings.json  settings.qrc
Tools/: camera_controller.py  camera_thread.py  drawing_manager.py  grid_container.py  log_manager.py  measurement_manager.py  settings_manager.py
cmake/: FindOpenCV.cmake
debug/Settings/: settings.ini
docs/: 00还未完成内容.md  01_核心架构设计.md  02_相机控制模块开发总结.md  03_Qt定时器线程安全修复总结.md  04_OpenCV并行后端问题分析.md  05_Qt高DPI显示问题修复总结.md  06_Qt高DPI显示问题重新修复总结.md  C++画点功能性能瓶颈分析与优化方案.md  C++画点功能高优先级优化实施报告.md  architecture.md  development_plan.md  implementation_summary.md  实现总结.md  按钮连接优化任务.md  画点功能修复总结.md  画点功能模糊问题优化总结.md  直线功能修复总结.md  相机资源释放修复说明.md  精细圆功能实现总结.md  错误信息.txt
docs/分层渲染/: 优化分层6.md  优化分层式.md  优化分层渲染2.md  优化分层渲染3.md  优化分层渲染4.md  优化分层渲染5.md  优化分层渲染6.md  分层7.md
issues/: 相机状态监控系统实施.md  线段与圆垂线功能.md
resources/config/: default_settings.json
src/: CalibrationDialog.cpp  CalibrationDialog.h  CheckerboardCalibrationDialog.cpp  CheckerboardCalibrationDialog.h  LogManager.cpp  LogManager.h  MutiCamApp.cpp  MutiCamApp.h  MutiCamApp.ui  PaintingOverlay.cpp  PaintingOverlay.h  SerialController.cpp  SerialController.h  SettingsManager.cpp  SettingsManager.h  TrajectoryRecorder.cpp  TrajectoryRecorder.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h  ZoomPanWidget.cpp  ZoomPanWidget.h  dependencies_test.cpp  dependencies_test.h  main.cpp
src/camera/: camera_controller.h  camera_manager.cpp  camera_manager.h  camera_thread.cpp  camera_thread.h  hikvision_camera.cpp  hikvision_camera.h
src/domain/camera/interfaces/: ICameraController.h
src/domain/common/: Enums.h
src/domain/drawing/entities/: DrawingTypes.h
src/domain/drawing/services/: DrawingManager.cpp  DrawingManager.h  LayerManager.cpp  LayerManager.h
src/domain/measurement/interfaces/: IMeasurementCalculator.h
src/image_processing/: edge_detector.cpp  edge_detector.h  shape_detector.cpp  shape_detector.h
src/infrastructure/camera/: HikVisionCamera.cpp  HikVisionCamera.h
src/infrastructure/threading/: CameraThread.cpp  CameraThread.h
src/matching/: MatchingController.cpp  MatchingController.h
src/matching/ui/: ROIControlButtons.cpp  ROIControlButtons.h  ROIManager.cpp  ROIManager.h  ROIOverlayItem.cpp  ROIOverlayItem.h  TemplateNameDialog.cpp  TemplateNameDialog.h
src/template_matching/: KcgMatch_fixed.cpp  RotatableROIOverlay.cpp  RotatableROIOverlay.h  TemplateMatchingManager.cpp  TemplateMatchingManager.h  TemplateNameDialog.cpp  TemplateNameDialog.h
src/utils/: DebugUtils.cpp  DebugUtils.h
templates/: default_config.jsonc
参考项目/MutiCamApp-Match/: CMakeLists.txt  KcgMatch.h  MatchingController.cpp  README.md
参考项目/MutiCamApp_python原版/: main.py  main.spec  mainwindow.py  mainwindow.ui  软件使用说明书.md  软件架构说明书.md
参考项目/MutiCamApp_python原版/Logs/: 2025-07-12.txt  2025-08-11.txt  2025-08-12.txt
参考项目/MutiCamApp_python原版/Settings/: settings.json
参考项目/MutiCamApp_python原版/Tools/: camera_controller.py  drawing_manager.py  grid_container.py  log_manager.py  measurement_manager.py  settings_manager.py
参考项目/海康工业相机SDK取图历程例子/CameraCallBack_2/: CameraCallBack.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
参考项目/海康工业相机SDK取图历程例子/CameraCallBack_2/HikSdk/: HikSdk.pri  cmvcamera.cpp  cmvcamera.h  grabimgthread.cpp  grabimgthread.h
参考项目/海康工业相机SDK取图历程例子/hikCase_01/: cmvcamera.cpp  cmvcamera.h  hikCase_01.pro  hikCase_01.pro.user.81c04ab  mainwindow.cpp  mainwindow.h  mainwindow.ui  myThread.cpp  myThread.h
(+337 files in other folders)
